radarr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
  - host: radarr4k.<path:apps-kv/data/general#internalDN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-proxy01
            port:
              number: 9000
  tls:
  - hosts:
    - radarr4k.<path:apps-kv/data/general#internalDN>
